# homo-ray-tracer

./: CMakeLists.txt  README.md  main.cpp
core/: CMakeLists.txt
core/include/: camera.h  film.h  ray.h  raycaster.h  sampler.h  scene.h  transform.h
core/include/shape/: bbox.h  box.h  shape.h  sphere.h  triangle_list.h
core/src/: camera.cpp  film.cpp  raycaster.cpp  scene.cpp  transform.cpp
core/src/shape/: bbox.cpp  box.cpp  shape.cpp  sphere.cpp  triangle_list.cpp
math/: CMakeLists.txt
math/include/: MathFunctions.h  Matrix.h  Vector.h
math/src/: Matrix.cpp  Vector.cpp
